--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-react-router",
+  "name": "clon-react-router",
   "private": true,
   "version": "0.1.0",
   "type": "module",
